# c2m

./: CMakeLists.txt  README.md  stdio.m  stdlib.m  update.sh
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
mlib/: math.m  stdio.m  stdlib.m
src/: c2m.c  cmodule.c
